--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,5 +2,29 @@
 
 
 .container {
-  padding: 25px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  margin: 0 auto;
+}
+
+.form_wrapper {
+  position: relative;
+  min-height: 300px;
+  border: 2px solid $black;
+  padding: 20px 30px 25px 20px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.submit_button {
+  width: 100px;
+  height: 40px;
+  background-color: $green;
+  color: $white;
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  box-shadow: rgba(0, 161, 9, 0.12) 0px 2px 4px 0px, rgba(0, 161, 9, 0.32) 0px 2px 16px 0px;
+
 }
