--- a/src/components/privacy-form/PrivacyForm.module.scss
+++ b/src/components/privacy-form/PrivacyForm.module.scss
@@ -3,6 +3,8 @@
 .root {
   display: flex;
   flex-direction: column;
+  min-height: 250px;
+  position: relative;
 }
 
 .form {
@@ -20,4 +22,10 @@
     width: 20px;
     height: 20px;
   }
+}
+
+.submit {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
