--- a/src/components/user-form/UserForm.module.scss
+++ b/src/components/user-form/UserForm.module.scss
@@ -3,4 +3,18 @@
 .root {
   display: flex;
   flex-direction: column;
+  position: relative;
+  width: 500px;
+  margin: 0 auto;
+
+}
+
+.submit {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+
+  &--disabled {
+    background-color: grey;
+  }
 }
