Handle case when form is not valid for done tab

--- a/src/components/done-tab-content/DoneTabContent.module.scss
+++ b/src/components/done-tab-content/DoneTabContent.module.scss
@@ -16,3 +16,14 @@
   flex-wrap: wrap;
   color: #00A109;
 }
+
+.error_text {
+  flex-wrap: wrap;
+  color: red;
+}
+
+.error__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
