--- a/src/components/page-indicator/PageIndicator.module.scss
+++ b/src/components/page-indicator/PageIndicator.module.scss
@@ -4,11 +4,16 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border: 2px solid $black;
 
   :first-child {
     border-left: none;
+  }
+
+  &__not_done {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -20,16 +25,11 @@
   border-left: 2px solid $black;
   margin: 0;
   cursor: pointer;
-  // height: 100%;
   height: 35px;
 
   padding: 0;
-  // width: auto;
-
-
 
   &--active {
     background-color: $blue;
   }
 }
-
